fixed jumbotron spacing

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .jumbotron {
     background-color: black;
     padding: 10px;
+    margin-top: 5px;
 }
 
 .card-header {
